fix collapse image was not displayed due bootstrap rule

--- a/jportal_mcr_module/src/main/resources/META-INF/resources/templates/template_calendar/CSS/template_calendar.css
+++ b/jportal_mcr_module/src/main/resources/META-INF/resources/templates/template_calendar/CSS/template_calendar.css
@@ -27,10 +27,11 @@
 }
 .keywords .expand {
 	background-image: url("../IMAGES/plus.png");
-
+	display: inline;
 }
 .keywords .collapse {
 	background-image: url("../IMAGES/minus.png");
+	display: inline;
 }
 
 #jp-content-LColumn ul {
